<resources>
    <string name="app_name">Mobile Id</string>
    <string name="str_vui_long_doi">Vui lòng đợi...</string>
    <string name="str_oke">Ok</string>
    <string name="str_cancel">Hủy</string>
    <string name="str_thong_bao">Thông báo</string>
    <string name="str_thong_bao_exit">Bạn có chắc chắn muốn thoát ứng dụng không?</string>
    <string name="tiepTuc">Tiếp tục</string>
    <string name="str_choi_ngay">Chơi ngay</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Trang chủ</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_list_cert">Danh sách chứng thư</string>
    <string name="title_tool_cert">Công cụ kí số</string>
    <string name="title_menu">Menu</string>
    <string name="title_notifications">Notifications</string>
    <string name="str_assign_token">Mời bạn chọn loại Token đăng nhập</string>
    <string name="str_hard_token">Hard Token</string>
    <string name="str_soft_token">Soft Token</string>
    <string name="str_login">Đăng nhập</string>
    <string name="str_password">Mật khẩu</string>
    <string name="str_forgot_password">Quên mật khẩu?</string>
    <string name="str_forgot_password_2">Quên mật khẩu</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="str_ok">Đồng ý</string>
    <string name="str_thong_tin_chua_trong_chung_thu">Thông tin dưới đây được lưu trong chứng thư</string>
    <string name="str_thong_tin_co_ban">Thông tin cơ bản</string>
    <string name="str_goi_chung_thu">Gói chứng thư</string>
    <string name="str_thoi_han_chung_thu">Thời hạn chứng thư</string>
    <string name="str_thong_tin_chi_tiet">Thông tin chi tiết</string>
    <string name="str_chu_trung_thu">Chủ chứng thư</string>
    <string name="str_so_cmnd">Số CMND</string>
    <string name="str_thu_dien_tu">Thư điện tử</string>
    <string name="str_phone">Số điện thoại</string>
    <string name="str_province">Tỉnh thành phố</string>
    <string name="str_ower_cert">Chủ chứng thư</string>
    <string name="str_cam_ket_1">* Tôi cam đoan những thông tin khai trên là đúng sự thật, nếu sai tôi hoàn toàn chịu trách nhiệm trước pháp luật</string>
    <string name="str_cam_ket_2">* Tôi cam đoan chấp hành nghiêm chỉnh mọi quy định về quản lý, sử dụng chữ kí số, chứng thư số và dịch vụ chứng thư số.</string>
    <string name="str_cert">Chứng thư</string>
    <string name="str_list_cert">Danh sách chứng thư</string>
    <string name="str_upgrade_cert">Gia hạn chứng thư</string>
    <string name="str_pay_cert">Thanh toán chứng thư</string>
    <string name="str_setting">Cài đặt</string>
    <string name="str_exit">Thoát</string>
    <string name="str_info">Thông tin</string>
    <string name="str_cam_ket_3">Cam kết sử dụng dịch vụ</string>
    <string name="str_dang_ky">Đăng ký</string>
    <string name="str_voucher">Mã voucher</string>
    <string name="str_tao_moi">tạo mới</string>
    <string name="str_no_cert">Chưa có chứng thư để sử dụng dịch vụ. Vui lòng thêm mới!</string>
    <string name="str_add_cert">Thêm mới chứng thư</string>

    <!--valid data-->
    <string name="str_not_empty_pass">Mật khẩu không được để trống</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
