<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_50sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/str_thong_tin_chua_trong_chung_thu"
                android:textStyle="italic"
                android:textSize="@dimen/_14sdp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_2sdp"
                android:paddingBottom="@dimen/_2sdp"
                android:text="@string/str_thoi_han_chung_thu"
                android:gravity="center"
                android:textStyle="italic"
                android:textColor="@color/md_white"
                android:background="@color/md_brown_800"
                android:textSize="@dimen/_14sdp"/>

            <Spinner
                android:id="@+id/sp_deadline_certificate"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center_vertical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_2sdp"
                android:paddingBottom="@dimen/_2sdp"
                android:text="@string/str_thong_tin_chi_tiet"
                android:gravity="center"
                android:textStyle="italic"
                android:textColor="@color/md_white"
                android:background="@color/md_brown_800"
                android:textSize="@dimen/_14sdp"/>

            <EditText
                android:id="@+id/tv_owner_cert"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingTop="@dimen/_2sdp"
                android:paddingBottom="@dimen/_2sdp"
                android:hint="@string/str_ower_cert"
                android:inputType="text"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/tv_identity"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingTop="@dimen/_2sdp"
                android:paddingBottom="@dimen/_2sdp"
                android:hint="@string/str_so_cmnd"
                android:inputType="text"
                android:textSize="14sp"/>

            <EditText
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingTop="@dimen/_2sdp"
                android:paddingBottom="@dimen/_2sdp"
                android:hint="@string/str_thu_dien_tu"
                android:inputType="text"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/tv_phone"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingTop="@dimen/_2sdp"
                android:paddingBottom="@dimen/_2sdp"
                android:hint="@string/str_phone"
                android:inputType="phone"
                android:textSize="14sp"/>

            <EditText
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingTop="@dimen/_2sdp"
                android:paddingBottom="@dimen/_2sdp"
                android:hint="@string/str_voucher"
                android:inputType="text"
                android:textSize="14sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:textSize="14sp"
                    android:text="@string/str_province"/>

                <Spinner
                    android:id="@+id/sp_province"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:gravity="center_vertical"
                    android:layout_weight="6"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_2sdp"
                android:paddingBottom="@dimen/_2sdp"
                android:text="@string/str_cert"
                android:gravity="center"
                android:textStyle="italic"
                android:textColor="@color/md_white"
                android:background="@color/md_brown_800"
                android:textSize="@dimen/_14sdp"/>
            <Spinner
                android:id="@+id/sp_cert"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center_vertical"
                android:layout_marginBottom="@dimen/_10sdp"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_tap_2"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:text="@string/str_tao_moi"
        android:textColor="@color/textColorWhite"
        android:textSize="@dimen/textSize_14sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
