<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_thoat"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/padding_12dp"
        android:gravity="center"
        android:paddingLeft="@dimen/padding_32dp"
        android:paddingRight="@dimen/padding_32dp"
        android:text="@string/str_assign_token"
        android:textStyle="bold"
        android:textSize="16sp" />

    <LinearLayout
        android:background="@drawable/background_button_left_right_10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnHardToken"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/str_hard_token"
            android:background="@null"
            android:textColor="@color/textColorWhite" />
        <TextView
            android:textColor="@color/textColorWhite"
            android:text="|"
            android:textSize="30dp"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnSoftToken"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/str_soft_token"
            android:textColor="@color/textColorWhite" />
    </LinearLayout>


</LinearLayout>