<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_login_1"
    tools:context=".ui.activity.LoginActivity">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:focusableInTouchMode="true"
        android:layout_centerInParent="true"
        android:paddingBottom="@dimen/_10sdp"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">
        <EditText
            android:lines="1"
            android:singleLine="true"
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:hint="@string/str_password"
            android:inputType="textPassword"
            android:background="@drawable/bg_edit_text"
            android:textColorHint="@color/md_grey_800"
            android:textColor="@color/md_grey_800"
            android:padding="@dimen/padding"
            android:textSize="@dimen/_14sdp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bg_btn_tap"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:text="@string/str_login"
        android:textColor="@color/textColorWhite"
        android:textSize="@dimen/textSize_16sp"
        android:layout_below="@+id/txt_input_layout"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingLeft="@dimen/padding_12dp"
        android:text="@string/str_forgot_password"
        android:textColor="@color/md_grey_800"
        android:textSize="@dimen/textSize_16sp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_50sdp"/>
</RelativeLayout>